--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,8 @@
 
 body {
     max-width: 1100px;
-    min-height: 100vh;
+    padding-top: 100px;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
