--- a/css/end.css
+++ b/css/end.css
@@ -1,5 +1,5 @@
 p {
-    font-size: 3remm;
+    font-size: 3rem;
     font-weight: 600;
     background-color: #6757d9;
     color: #fff;
@@ -11,6 +11,19 @@ p {
     margin-bottom: 70px;
 }
 
+#warning {
+    font-weight: 700;
+    color: #f13413;
+    font-size: 14px;
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+#warning.active {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
 input {
     border: 2px solid #fff;
     background-color: #eeedfb;
@@ -18,7 +31,7 @@ input {
     width: 300px;
     font-size: 1rem;
     border-radius: 20px;
-    margin-bottom: 30px;
+    margin: 30px 0 15px;
     transition: all .2s ease-in;
 }
 
@@ -29,7 +42,8 @@ input:focus {
 
 button,
 a {
-    all: unset;
+    /* all: unset; */
+    border: none;
     background-color: #fff;
     border-radius: 20px;
     width: 300px;
@@ -43,7 +57,7 @@ a {
     transition: all .2s ease-in;
 }
 
-button, 
+button,
 a:hover {
  background-color: #6757d9;
  color: #fff;
